--- a/src/main/resources/edu/farmingdale/taskmanager/settings-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/settings-view.fxml
@@ -3,34 +3,35 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<BorderPane prefHeight="600" prefWidth="900" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.SettingsController">
+<BorderPane prefHeight="1024" prefWidth="1440" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.SettingsController">
 
     <left>
-        <VBox alignment="BASELINE_CENTER" prefWidth="220" spacing="30" styleClass="container">
+        <VBox alignment="TOP_CENTER" prefWidth="220" spacing="30" styleClass="container">
             <padding><Insets bottom="10" left="10" right="10" top="25" /></padding>
 
-            <Label prefHeight="34.0" prefWidth="188.0" style="-fx-font-weight: bold; -fx-font-size: 16;" styleClass="menu-label" text="⚔️ Back to Main Page" textFill="#6b350e">
-                <font>
-                    <Font name="System Bold" size="13.0" />
-                </font>
-                <VBox.margin><Insets bottom="20" /></VBox.margin> </Label>
-            <Button fx:id="profileBtn" maxWidth="-Infinity" onAction="#openProfile" prefHeight="40" text="Profile" textFill="#72490b" />
-            <Button fx:id="gameBtn" maxWidth="-Infinity" onAction="#openGameSettings" prefHeight="40" text="Game Settings" textFill="#72490b" />
-            <Button fx:id="soundBtn" maxWidth="-Infinity" onAction="#openSoundSettings" prefHeight="40" text="Sound Settings" textFill="#72490b" />
-            <Button fx:id="securityBtn" maxWidth="-Infinity" onAction="#openSecurity" prefHeight="40" text="Account Security" textFill="#72490b" />
-            <Button fx:id="deactivateBtn" maxWidth="-Infinity" onAction="#openDeactivate" prefHeight="40" text="Deactivate Account" textFill="#72490b" />
-            <Button fx:id="parentalBtn" maxWidth="-Infinity" onAction="#openParental" prefHeight="40" text="Parental Controls" textFill="#72490b" />
-            <Button fx:id="logoutBtn" maxWidth="-Infinity" onAction="#logout" prefHeight="40" text="Logout" textFill="#72490b" />
-        </VBox>
+            <Label style="-fx-font-weight: 20; -fx-font-size: 14;" styleClass="menu-label" text="⚔️ Back to Main Page" textFill="#6b350e" />
+         <VBox alignment="CENTER" prefWidth="200.0" spacing="30.0">
+            <children>
+                  <Button fx:id="profileBtn" onAction="#openProfile" text="Profile" textFill="#72490b" />
+                  <Button fx:id="gameBtn" onAction="#openGameSettings" text="Game Settings" textFill="#72490b" />
+                  <Button fx:id="soundBtn" onAction="#openSoundSettings" text="Sound Settings" textFill="#72490b" />
+                  <Button fx:id="securityBtn" onAction="#openSecurity" text="Account Security" textFill="#72490b" />
+                  <Button fx:id="deactivateBtn" onAction="#openDeactivate" text="Deactivate Account" textFill="#72490b" />
+                  <Button fx:id="parentalBtn" onAction="#openParental" text="Parental Controls" textFill="#72490b" />
+                  <Button fx:id="logoutBtn" onAction="#logout" text="Logout" textFill="#72490b" />
 
+
+            </children>
+         </VBox>
+        </VBox>
     </left>
 
     <center>
         <StackPane fx:id="contentArea" style="-fx-background-color: #CBB186;" styleClass="container">
-            <Label style="-fx-font-size: 18; -fx-text-fill: #3B2E1D;" text="Select a Setting to View Details" />
+            <Label style="-fx-font-size: 18; -fx-text-fill: #3B2E1D;" text="Select a setting to view details" />
         </StackPane>
     </center>
+
 
 </BorderPane>
