updated settings/revised ProfileSettingsController.java

--- a/src/main/resources/edu/farmingdale/taskmanager/profilesetting-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/profilesetting-view.fxml
@@ -2,20 +2,24 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.ProfileSettingsController">
-    <Label layoutX="380.0" layoutY="17.0" styleClass="menu-label" text="Profile Settings" textFill="#6f4818" />
+<AnchorPane prefHeight="1024.0" prefWidth="1440.0" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.ProfileSettingsController">
+    <Label layoutX="623.0" layoutY="34.0" styleClass="menu-label" text="Profile Settings" textFill="#6f4818">
+      <font>
+         <Font size="22.0" />
+      </font></Label>
 
     <HBox spacing="10" />
 
     <HBox spacing="10" />
 
-    <Button layoutX="391.0" layoutY="432.0" onAction="#saveProfile" text="Save Changes" textFill="#5b4317" />
+    <Button layoutX="619.0" layoutY="549.0" onAction="#saveProfile" text="Save Changes" textFill="#5b4317" />
     <Label fx:id="statusLabel" style="-fx-text-fill: lightgreen;" />
-     <TextField fx:id="emailField" layoutX="349.0" layoutY="342.0" />
-     <TextField fx:id="usernameField" layoutX="349.0" layoutY="244.0" />
-     <Label layoutX="349.0" layoutY="201.0" prefHeight="43.0" prefWidth="105.0" text="Username:" textFill="#5b3a17" />
-     <Label layoutX="349.0" layoutY="308.0" text="Email:" textFill="#654b21" />
+     <TextField fx:id="emailField" alignment="CENTER" layoutX="576.0" layoutY="434.0" />
+     <TextField fx:id="usernameField" alignment="CENTER" layoutX="576.0" layoutY="306.0" />
+     <Label layoutX="576.0" layoutY="263.0" prefHeight="43.0" prefWidth="105.0" text="Username:" textFill="#5b3a17" />
+     <Label layoutX="576.0" layoutY="400.0" text="Email:" textFill="#654b21" />
 
 
 
