Setup Login and Signup

--- a/src/main/resources/edu/farmingdale/taskmanager/signup-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/signup-view.fxml
@@ -11,5 +11,6 @@
             <Rectangle2D />
          </viewport>
       </ImageView>
+      <Pane prefHeight="1000.0" prefWidth="800.0" />
    </children>
 </StackPane>
