--- a/src/main/resources/edu/farmingdale/taskmanager/login-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/login-view.fxml
@@ -1,17 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Rectangle2D?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <StackPane alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1024" prefWidth="1440" styleClass="bg" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.LoginController">
     <children>
-        <ImageView fitHeight="1024.0" fitWidth="1440.0" pickOnBounds="true" preserveRatio="true">
-            <viewport>
-                <Rectangle2D />
-            </viewport>
-        </ImageView>
-        <Pane prefHeight="1000.0" prefWidth="800.0" />
+        <Pane prefHeight="800.0" prefWidth="1000.0" styleClass="container" StackPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="1170.0" fitWidth="832.5" pickOnBounds="true" preserveRatio="true" styleClass="broom-left" translateX="150.0">
+               <image>
+                  <Image url="@images/broom2.png" />
+               </image>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+            </ImageView>
+            <ImageView fitHeight="1170.0" fitWidth="832.5" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true" translateX="450.0">
+               <image>
+                  <Image url="@images/broom2.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
+      <Pane prefHeight="200.0" prefWidth="200.0" />
+      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: transparent;">
+         <children>
+            <Text boundsType="VISUAL" fill="#2d1a05" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-background-color: transparent;" styleClass="transparent-textarea" text="Chore&#10;Quest" textAlignment="CENTER" textOrigin="CENTER" wrappingWidth="471.0400390625">
+               <font>
+                  <Font name="Inknut Antiqua Regular" size="120.0" />
+               </font>
+               <effect>
+                  <DropShadow offsetX="5.0" offsetY="10.0">
+                     <color>
+                        <Color red="0.17000000178813934" green="0.09769333153963089" blue="0.020400000736117363" opacity="0.5418251156806946" />
+                     </color>
+                  </DropShadow>
+               </effect>
+            </Text>
+         </children>
+      </VBox>
+      <VBox alignment="CENTER" layoutY="200.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" style="-fx-background-color: rgba(245, 202, 137, 0.94);" StackPane.alignment="CENTER" />
     </children>
 </StackPane>
