--- a/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
+++ b/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
@@ -297,4 +297,22 @@
     -fx-background-radius: 2;
 }
 
+.broom-left {
+    /* be25bf8323ac01d6d9db995037b27b9c 3 */
+
+    -fx-position: absolute;
+    -fx-width: 740px;
+    -fx-height: 881px;
+    -fx-left: 464px;
+    -fx-top: 169px;
+
+    -fx-background: url('..images/broom2.png');
+    -fx-transform: matrix(-1, 0, 0, 1, 0, 0);
+
+}
+
+.transparent-textarea {
+    -fx-background-color: transparent;
+}
+
 
