--- a/src/main/resources/edu/farmingdale/taskmanager/add-ritual-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/add-ritual-view.fxml
@@ -12,13 +12,13 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.shape.Rectangle?>
 
-<StackPane alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="574.0" prefWidth="500.0" styleClass="bg" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.AddRitualController">
+<StackPane alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="310.0" prefWidth="500.0" styleClass="bg" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.AddRitualController">
     <children>
             <VBox maxWidth="446.0" minWidth="446.0" prefHeight="1024.0" prefWidth="446.0">
                 <children>
                     <StackPane>
                         <children>
-                            <VBox maxHeight="564.0" maxWidth="490.0" prefHeight="564.0" prefWidth="490.0" styleClass="container">
+                            <VBox maxHeight="300.0" maxWidth="490.0" prefHeight="300.0" prefWidth="490.0" styleClass="container">
                                 <children>
                                     <StackPane alignment="TOP_LEFT" prefHeight="28.0" prefWidth="436.0">
                                         <children>
@@ -78,7 +78,10 @@
                                  <opaqueInsets>
                                     <Insets />
                                  </opaqueInsets></ComboBox>
-                              <Button fx:id="createRitualButton" mnemonicParsing="false" onMouseClicked="#createRitual" styleClass="create-ritual-button" text="Create Ritual" />
+                              <Button fx:id="createRitualButton" mnemonicParsing="false" onMouseClicked="#createRitual" prefHeight="66.0" prefWidth="223.0" styleClass="create-ritual-button" text="Create Ritual">
+                                 <VBox.margin>
+                                    <Insets top="10.0" />
+                                 </VBox.margin></Button>
                            </children>
                            <padding>
                               <Insets top="20.0" />
@@ -86,7 +89,7 @@
                                     </VBox>
                                 </children>
                             </VBox>
-                            <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#1f93ff00" height="574.0" mouseTransparent="true" stroke="#281902" strokeType="INSIDE" strokeWidth="5.0" width="500.0" />
+                            <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#1f93ff00" height="310.0" mouseTransparent="true" stroke="#281902" strokeType="INSIDE" strokeWidth="5.0" width="500.0" />
                         </children>
                         <VBox.margin>
                             <Insets />
