--- a/src/main/resources/edu/farmingdale/taskmanager/profilesetting-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/profilesetting-view.fxml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="1024.0" prefWidth="1440.0" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.ProfileSettingsController">
-    <Label layoutX="623.0" layoutY="34.0" styleClass="menu-label" text="Profile Settings" textFill="#6f4818">
-      <font>
-         <Font size="22.0" />
-      </font></Label>
+   <Label alignment="CENTER" layoutX="341.0" layoutY="27.0" prefHeight="156.0" prefWidth="585.0" style="-fx-font-size: 60.0" text="Profile Settings" textFill="#6f4818">
+       <font>
+            <Font size="71.0" />
+        </font>
+      <effect>
+         <DropShadow height="29.85" radius="12.95" width="23.95" />
+      </effect></Label>
 
     <HBox spacing="10" />
 
     <HBox spacing="10" />
 
-    <Button layoutX="619.0" layoutY="549.0" onAction="#saveProfile" text="Save Changes" textFill="#5b4317" />
+
+    <Button layoutX="562.0" layoutY="618.0" onAction="#saveProfile" text="Save Changes" textFill="#5b4317" />
     <Label fx:id="statusLabel" style="-fx-text-fill: lightgreen;" />
-     <TextField fx:id="emailField" alignment="CENTER" layoutX="576.0" layoutY="434.0" />
-     <TextField fx:id="usernameField" alignment="CENTER" layoutX="576.0" layoutY="306.0" />
-     <Label layoutX="576.0" layoutY="263.0" prefHeight="43.0" prefWidth="105.0" text="Username:" textFill="#5b3a17" />
-     <Label layoutX="576.0" layoutY="400.0" text="Email:" textFill="#654b21" />
+     <TextField fx:id="emailField" alignment="CENTER" layoutX="496.0" layoutY="512.0" prefHeight="43.0" prefWidth="247.0" />
+     <TextField fx:id="usernameField" alignment="CENTER" layoutX="489.0" layoutY="343.0" prefHeight="43.0" prefWidth="247.0" />
+     <Label layoutX="489.0" layoutY="291.0" prefHeight="43.0" prefWidth="181.0" style="-fx-font-size: 25.0" text="Username:" textFill="#5b3a17">
+
+      </Label>
+     <Label layoutX="496.0" layoutY="460.0" style="-fx-font-size: 25.0" text="Email:" textFill="#654b21" />
 
 
 
