--- a/src/main/resources/edu/farmingdale/taskmanager/settings-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/settings-view.fxml
@@ -10,7 +10,7 @@
         <VBox alignment="TOP_CENTER" prefWidth="220" spacing="30" styleClass="container">
             <padding><Insets bottom="10" left="10" right="10" top="25" /></padding>
 
-            <Label style="-fx-font-weight: bold; -fx-font-size: 14;" styleClass="menu-label" text="⚔️ Back to Main Page" textFill="#6b350e" />
+            <Label style="-fx-font-weight: bold; -fx-font-size: 14;" styleClass="menu-label" text="⚔️ Back to Main Page" textFill="#6b350e" onMouseClicked="#goBack"/>
          <VBox alignment="CENTER" prefWidth="200.0" spacing="30.0">
             <children>
                   <Button fx:id="profileBtn" onAction="#openProfile" text="Profile" textFill="#72490b" />
@@ -29,7 +29,7 @@
 
     <center>
         <StackPane fx:id="contentArea" style="-fx-background-color: #CBB186;" styleClass="container">
-            <Label style="-fx-font-size: 18; -fx-text-fill: #3B2E1D;" text="Select a setting to view details" />
+            <Label style="-fx-font-size: 18; -fx-text-fill: #3B2E1D;" text="Select a Setting to View Details" />
         </StackPane>
     </center>
 
