--- a/src/main/resources/edu/farmingdale/taskmanager/login-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/login-view.fxml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
 
 <StackPane alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1024" prefWidth="1440" styleClass="bg" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.LoginController">
     <children>
         <Pane prefHeight="800.0" prefWidth="1000.0" styleClass="container" StackPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="1170.0" fitWidth="832.5" pickOnBounds="true" preserveRatio="true" styleClass="broom-left" translateX="150.0">
+            <ImageView fitHeight="1170.0" fitWidth="832.5" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true" scaleX="0.0" style="-fx-scale-x: -1;" styleClass="broom-left" translateX="150.0">
                <image>
                   <Image url="@images/broom2.png" />
                </image>
@@ -30,23 +36,65 @@
             </ImageView>
          </children>
       </Pane>
-      <Pane prefHeight="200.0" prefWidth="200.0" />
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: transparent;">
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="85.0" prefWidth="800.0" style="-fx-background-color: rgba(224, 179, 113, 0.94);" translateY="125.0" StackPane.alignment="TOP_CENTER">
+         <effect>
+            <Glow level="0.25" />
+         </effect></Pane>
+      <Pane blendMode="SOFT_LIGHT" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="975.0" prefWidth="1200.0" style="-fx-border-color: #6D3535; -fx-border-radius: 20; -fx-border-width: 6;" translateY="-10.0" StackPane.alignment="CENTER">
+         <effect>
+            <Lighting bumpInput="$null" specularConstant="0.35" specularExponent="29.14">
+               <light>
+                  <Light.Distant />
+               </light>
+            </Lighting>
+         </effect>
+      </Pane>
+      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
          <children>
-            <Text boundsType="VISUAL" fill="#2d1a05" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-background-color: transparent;" styleClass="transparent-textarea" text="Chore&#10;Quest" textAlignment="CENTER" textOrigin="CENTER" wrappingWidth="471.0400390625">
-               <font>
-                  <Font name="Inknut Antiqua Regular" size="120.0" />
-               </font>
+             <TextFlow textAlignment="CENTER">
+                 <Text fill="#2d1a05" style="-fx-font-family: 'Inknut Antiqua'; -fx-font-size: 120;" text="Chore" translateY="-50.0">
+                  <effect>
+                     <DropShadow offsetX="5.0" offsetY="10.0">
+                        <color>
+                           <Color opacity="0.6673004031181335" />
+                        </color>
+                     </DropShadow>
+                  </effect></Text>
+                 <Text text="&#10;" />
+                 <Text fill="#2d1a05" style="-fx-font-family: 'Inknut Antiqua'; -fx-font-size: 120;" text="Quest" translateY="-250.0">
+                  <effect>
+                     <DropShadow offsetX="5.0" offsetY="10.0">
+                        <color>
+                           <Color opacity="0.5627376437187195" />
+                        </color>
+                     </DropShadow>
+                  </effect></Text>
+             </TextFlow>
+
+         </children>
+      </VBox>
+      <VBox alignment="BOTTOM_CENTER" blendMode="SRC_ATOP" layoutY="500" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="625.0" prefWidth="600.0" style="-fx-background-color: rgba(245, 202, 137, 1.0); -fx-background-radius: 15; -fx-border-color: #2d1a05; -fx-border-radius: 15; -fx-border-width: 3.5;" StackPane.alignment="CENTER">
+         <StackPane.margin>
+            <Insets top="250.0" />
+         </StackPane.margin>
+         <children>
+            <Text fill="#2d1a05" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 22px;" text="Email/Username" translateX="-172.0" translateY="-230.0">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Text>
+            <TextField fx:id="emailTextField" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="50.0" prefWidth="540.0" style="-fx-background-color: #F5EBE0;" translateX="-5.0" translateY="-230.0" />
+            <Text fill="#2d1a05" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 22px;" text="Password" translateX="-215.0" translateY="-230.0" />
+            <TextField fx:id="passwordTextField" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="50.0" prefWidth="540.0" style="-fx-background-color: #F5EBE0;" translateX="-5.0" translateY="-230.0" />
+            <Button fx:id="loginButton" mnemonicParsing="false" prefHeight="75.0" prefWidth="350.0" style="-fx-background-color: #2d1a05; -fx-font-size: 32px; -fx-text-fill: #F5EBE0; -fx-background-radius: 15;" text="Begin Quest" translateY="-180.0">
                <effect>
                   <DropShadow offsetX="5.0" offsetY="10.0">
                      <color>
-                        <Color red="0.17000000178813934" green="0.09769333153963089" blue="0.020400000736117363" opacity="0.5418251156806946" />
+                        <Color opacity="0.4163497984409332" />
                      </color>
                   </DropShadow>
-               </effect>
-            </Text>
-         </children>
-      </VBox>
-      <VBox alignment="CENTER" layoutY="200.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" style="-fx-background-color: rgba(245, 202, 137, 0.94);" StackPane.alignment="CENTER" />
+               </effect></Button>
+            <Button fx:id="googleButton" maxWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="280.0" style="-fx-background-color: white; -fx-font-size: 18px; -fx-border-color: black; -fx-border-radius: 8; -fx-background-radius: 8;" text="Sign in with Google" translateY="-120.0" />
+         </children></VBox>
     </children>
 </StackPane>
